GC test oracle ref

--- a/document/source/assertion.bib
+++ b/document/source/assertion.bib
@@ -529,3 +529,14 @@ year={1968}
   year={2019},
   publisher={Springer}
 }
+
+
+@article{howden1978theoretical,
+  title={Theoretical and empirical studies of program testing},
+  author={Howden, William E},
+  journal={IEEE Transactions on Software Engineering},
+  number={4},
+  pages={293--298},
+  year={1978},
+  publisher={IEEE}
+}
