--- a/document/ieee_trans/asr_ieeetrans.tex
+++ b/document/ieee_trans/asr_ieeetrans.tex
@@ -104,6 +104,7 @@ Verification and Validation (V\&V), Autonomous Driving, Autonomous Vehicles, Sim
 % ***************************************************
 %  Bio
 % ***************************************************
+\vskip -2\baselineskip plus -1fil  
 \begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{../other/mugs/chris.jpg}}]{Chris Harper}
 is a Research Fellow in Robotics Safety \& Control at Bristol Robotics Laboratory, researching methods and technologies for safety assurance of autonomous systems, machine learning and AI. For over 20 years Dr Harper has worked in both industry and academia as a safety assurance specialist with experience in system/software hazard and safety analysis, safety cases and safety management, and has also been involved in development of international industry safety standards for robotics. His research interests include assurance methods, high integrity design, safety validation, and safety arguments/cases of autonomous systems. 
 %He has recently been working on the CCAV-funded R\&D projects ROBOPILOT (autonomous parcel delivery), CAV Forth (autonomous bus service) and SafeMRX (requirements for CAV minimum risk manoeuvres) and on a project for the Assuring Autonomy International Programme (AAIP) on assistive robotics in healthcare. 
